--- a/PidaClumetic/app/src/main/res/layout/activity_f_subcategory.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_f_subcategory.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:clipChildren="false">
-
 
 
     <android.support.v7.widget.Toolbar
@@ -19,7 +19,7 @@
             android:id="@+id/text_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="유아용품"
+            android:text=""
             android:textColor="@color/drk_gray"
             android:textSize="20sp"
             android:paddingStart="20dp"
@@ -54,53 +54,46 @@
         android:background="@color/lgt_gray"
         app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
-
-
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:paddingTop="15dp"
+        android:layout_marginTop="8dp"
         android:clipToPadding="false"
-        android:clipChildren="false">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="264dp"
             android:layout_centerInParent="true"
-            android:foregroundGravity="center"
-            android:overScrollMode="never"
             android:clipToPadding="false"
-            android:clipChildren="false"/>
+            android:foregroundGravity="center"
+            android:overScrollMode="never"></android.support.v4.view.ViewPager>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/buttonLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager"
+            android:background="@drawable/selection_0_selected"
             android:clipToPadding="false"
             android:padding="2dp"
-            android:clipChildren="false">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewPager">
 
             <ImageButton
                 android:id="@+id/button"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginBottom="60dp"
-                android:background="@drawable/btn_test_order"
+                android:background="@drawable/selection_1_selected"
+                android:clipToPadding="false"
                 android:elevation="16dp"
                 android:text=""
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:clipToPadding="false"
-                android:clipChildren="false"   />
+                app:layout_constraintStart_toStartOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
