--- a/PidaClumetic/app/src/main/res/layout/activity_j_group.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_j_group.xml
@@ -2,16 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/back"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:clipChildren="false">
+
 
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -19,19 +20,20 @@
             android:id="@+id/text_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="카테고리"
+            android:text="공동구매"
             android:textColor="@color/drk_gray"
             android:textSize="20sp"
-            app:fontFamily="@font/notosans" />
+            android:paddingStart="20dp"
+            app:fontFamily="@font/notosans"/>
 
         <ImageButton
             android:id="@+id/btnCamera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:background="#00000000"
-            android:paddingStart="0dp"
             android:paddingEnd="20dp"
+            android:paddingStart="0dp"
+            android:background="#00000000"
             app:srcCompat="@android:drawable/ic_menu_camera" />
 
         <ImageButton
@@ -39,55 +41,45 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:background="#00000000"
-            android:paddingStart="0dp"
             android:paddingEnd="20dp"
+            android:paddingStart="0dp"
+            android:background="#00000000"
             app:srcCompat="@android:drawable/ic_menu_search" />
-
 
     </android.support.v7.widget.Toolbar>
 
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="2dp"
         android:background="@color/lgt_gray"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
 
-    <ScrollView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <LinearLayout
+        <android.support.v4.view.ViewPager
+            android:id="@+id/groupViewPager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:layout_height="0dp"
+            android:layout_centerInParent="true"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:foregroundGravity="center"
+            android:overScrollMode="never"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/cream"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/img_cream"
-                android:background="#00000000"
-                android:layout_margin="10dp"/>
 
-            <ImageButton
-                android:id="@+id/baby"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/img_baby"
-                android:background="#00000000"
-                android:layout_margin="10dp"/>
-        </LinearLayout>
-    </ScrollView>
+    </android.support.constraint.ConstraintLayout>
 
 
     <android.support.design.widget.BottomNavigationView
@@ -106,5 +98,6 @@
             android:layout_height="@android:dimen/notification_large_icon_height"
             android:layout_alignParentBottom="true" />
     </android.support.design.widget.BottomNavigationView>
+
 
 </android.support.constraint.ConstraintLayout>
