--- a/PidaClumetic/app/src/main/res/layout/activity_f_subcategory.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_f_subcategory.xml
@@ -56,9 +56,11 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:clipToPadding="false"
+        android:clipChildren="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <android.support.v4.view.ViewPager
@@ -70,31 +72,19 @@
             android:foregroundGravity="center"
             android:overScrollMode="never"></android.support.v4.view.ViewPager>
 
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/buttonLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:background="@drawable/selection_0_selected"
+        <ImageButton
+            android:id="@+id/button"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginBottom="64dp"
+            android:background="@drawable/btn_test_order"
+            android:clipChildren="false"
             android:clipToPadding="false"
-            android:padding="2dp"
+            android:elevation="16dp"
+            android:src="@drawable/selection_0_selected"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager">
-
-            <ImageButton
-                android:id="@+id/button"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_marginBottom="60dp"
-                android:background="@drawable/selection_1_selected"
-                android:clipToPadding="false"
-                android:elevation="16dp"
-                android:text=""
-                android:textColor="#000000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-        </android.support.constraint.ConstraintLayout>
+            app:layout_constraintStart_toStartOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
