--- a/PidaClumetic/app/src/main/res/layout/activity_f_subcategory.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_f_subcategory.xml
@@ -70,7 +70,9 @@
             android:layout_centerInParent="true"
             android:clipToPadding="false"
             android:foregroundGravity="center"
-            android:overScrollMode="never"></android.support.v4.view.ViewPager>
+            android:overScrollMode="never"
+            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintTop_toTopOf="parent"></android.support.v4.view.ViewPager>
 
         <ImageButton
             android:id="@+id/button"
