--- a/PidaClumetic/app/src/main/res/layout/activity_i_account_1.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_i_account_1.xml
@@ -16,6 +16,12 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/lgt_gray"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
