--- a/PidaClumetic/app/src/main/res/layout/activity_j_group.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_j_group.xml
@@ -50,36 +50,29 @@
 
 
     <View
+        android:id="@+id/view3"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/lgt_gray"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/groupViewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="420dp"
+        android:layout_centerInParent="true"
+        android:layout_margin="5dp"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintEnd_toStartOf="@+id/view3"
+        app:layout_constraintStart_toEndOf="@+id/view3"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/groupViewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_centerInParent="true"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:foregroundGravity="center"
-            android:overScrollMode="never"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-    </android.support.constraint.ConstraintLayout>
 
 
     <android.support.design.widget.BottomNavigationView
