--- a/PidaClumetic/app/src/main/res/layout/activity_o_mypida.xml
+++ b/PidaClumetic/app/src/main/res/layout/activity_o_mypida.xml
@@ -58,11 +58,12 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="400dp"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="8dp"
+        android:clipChildren="false"
         android:clipToPadding="false"
         android:foregroundGravity="center"
+        android:gravity="center"
         android:overScrollMode="never"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintTop_toBottomOf="@+id/view"></android.support.v4.view.ViewPager>
